--- a/car.html
+++ b/car.html
@@ -1,4 +1,8 @@
-<center>
+cd<center>
 <h1>vijay</h1>  
 </center>  
 <hr>
+
+<p>
+Born in Madras to director S. A. Chandrasekhar, Vijay made his debut as a child actor in the Tamil film Vetri (1984). After a few roles as a child actor in his father films, he played his first lead role in the film Naalaiya Theerpu (1992) at the age of 18
+</p>
